--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
         "@material-ui/core": "^4.11.0",
         "@material-ui/icons": "^4.9.1",
         "@reduxjs/toolkit": "^1.4.0",
-        "@testing-library/jest-dom": "^4.2.4",
-        "@testing-library/react": "^9.5.0",
-        "@testing-library/user-event": "^7.2.1",
+        "@testing-library/jest-dom": "^5.11.1",
+        "@testing-library/user-event": "^12.0.13",
         "axios": "^0.19.2",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
@@ -20,7 +19,7 @@
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
-        "test": "react-scripts test",
+        "test": "react-scripts test --env=jsdom-fourteen",
         "eject": "react-scripts eject",
         "predeploy": "npm run build",
         "deploy": "gh-pages -d build"
@@ -41,6 +40,8 @@
         ]
     },
     "devDependencies": {
-        "gh-pages": "^3.1.0"
+        "@testing-library/react": "^10.4.7",
+        "gh-pages": "^3.1.0",
+        "msw": "^0.19.5"
     }
 }
